# Sonic2_ReinforcementLearning

./: .gitignore  CODE_WALKTHROUGH.md  README.md  check_env.py  current_check.txt  current_reliability.txt  debug_video.py  debug_video_2.py  diag_best_new.txt  diag_current_fresh.txt  diag_latest_new.txt  diag_out.txt  diag_progress.py  diag_v11_out.txt  extract_metrics.py  latest_diag.txt  main.py  pyproject.toml  record_success.py  record_victory.py  test_env.py  victory_analysis.txt  visual_diag.py  visual_diag_report.txt  visual_inspect.py  visual_verify.py
docs/: reinforcement_learning.md
src/: agent.py  cnn.py  count_victories.py  debug_final_stretch.py  env_wrappers.py  evaluate.py  evaluate_hud.py  ppo.py  record_victory.py  train.py  utils.py
tools/: check_env.py  debug_video_2.py  diag_progress.py  record_victory.py  test_env.py  visual_verify.py
