[project]
name = "sonicai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "gymnasium==0.29.1",
    "numpy<2.0.0",
    "opencv-python>=4.11.0.86",
    "shimmy[retro]==1.3.0",
    "stable-baselines3==2.4.1",
    "tensorboard>=2.14.0",
    "torch==2.4.1",
    "torchvision==0.19.1",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu121"
